Add Token Generation

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ ktor_version=2.3.7
 exposed_version=0.47.0
 kotlin_version=1.9.22
 logback_version=1.4.14
+commons_codec_version=1.15
 kotlin.code.style=official
